--- a/input/stylesheets/_header.sass
+++ b/input/stylesheets/_header.sass
@@ -51,22 +51,26 @@ menu
     &.selected
       > a
         :border-bottom 0
-        :color #333
+        :color #666
 
 nav
   +padding-leader(.225)
   +padding-trailer(1)
 menu
-  .russian.language.icon
-    :width 23px
+  .language.icon
+    :width 18px
     :height 18px
     :line-height 1em
     :border 0
     :vertical-align middle
-    :background url(../images/russian.png) center top no-repeat
-    :background-size 16px 16px
     :opacity 0.7
     :display inline-block
+    &.russian
+      :background url(../images/russian.png) center top no-repeat
+      :background-size 16px 16px
+    &.english
+      :background url(../images/english.png) center top no-repeat
+      :background-size 16px 16px
 main
   :display block
   menu
@@ -88,8 +92,16 @@ header
         :color #666
   h1
     :white-space nowrap
-    span 
-      :color #666
+    a
+      :color #333
+    span
+      &, a
+        :color #666
+    a
+      :text-decoration none
+      :border-bottom 1px solid #ccc
+      :line-height 0.85
+      :display inline-block
 
 
 @media (max-width: 700px)
