--- a/input/stylesheets/screen.sass
+++ b/input/stylesheets/screen.sass
@@ -14,6 +14,12 @@ $base-line-height: 24px
 
 +establish-baseline
 
+strong, b
+  :font-weight bold
+
+em, i
+  :font-style italic
+
 html
   :background #d6d2ca url(../images/bedge_grunge.png)
   :height 100%
@@ -40,7 +46,7 @@ header > section, main > section, .player > section, .contact > section, footer,
   :margin 0 auto
   :padding 0 3em
 
-header > section, .player > section, .contact > section, footer, .introduction > section
+header > section, .player > section, .contact > section, footer, .introduction > section, body.about main > section
   :max-width 750px
 
 .introduction > section
@@ -82,9 +88,13 @@ header > section, .player > section, .contact > section, footer, .introduction >
 @import footer
 
 
+body.about
+  .introduction
+    :display none
+
 
 @media (max-width: 700px)
-  menu .russian.language.icon
+  menu .language.icon
     :display none
 
   header > section, main > section, .player > section, .contact > section, footer, .introduction > section
