--- a/input/_includes/post.haml
+++ b/input/_includes/post.haml
@@ -1,8 +1,3 @@
   %li{:class => "{{post | to_class}}"}
-    %h2 
-      %a{:href => "#"} {{post.title}}
-    %a.play.button{:href => "#"}
-    {% if post.video %}
-    %video
-    {% endif %}
+    %span.play.button
     {{post.formatted_content | multiline}}
