--- a/input/_layouts/en.haml
+++ b/input/_layouts/en.haml
@@ -65,7 +65,7 @@
                   %a{:href => "/about/services"}
                     Services
                 %li
-                  %a{:href => "/about/experience"}
+                  %a{:href => "/about"}
                     Resume
                 %li
                   %a.russian.language{:href => "{{page.url | to_language: 'ru'}}"}<
@@ -132,7 +132,7 @@
       #footer-pusher
     %footer
       %p 
-        %a{:href => "/about/experience"}
+        %a{:href => "/about"}
           Since 1957 and going strong
       %menu
         %li.selected
